# spent-mgs

./: .gitignore  CODE_OF_CONDUCT.md  README.md  spend_state.py
backend/: .env.example  README.md  create_suser.py  db.py  db.sqlite3  main.py  pyproject.toml  req.txt  requirements.txt  shelly.py  vercel.json
backend/auth/: config.py  dependencies.py  permissions.py  roles.py
backend/migrations/models/: 0_20260215144541_init.py  0_20260222120801_init.py
backend/models/: __init__.py  models.py
backend/notifications/: service.py
backend/routes/: admins.py  approvals.py  audit_logs.py  events.py  notifications.py  policies.py  receipts.py  spends.py  users.py
backend/services/: approval_service.py  approver_service.py  audit_service.py  gemini_service.py  idempotency_service.py  notification_service.py  policy_service.py  receipt_service.py  spend_service.py  user_service.py
backend/templates/: home.html
frontend/: .env.example  .gitignore  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  Wrapper.tsx  index.css  main.tsx
frontend/src/components/addOn/: EmailSignup.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuthenticatedUser.js
frontend/src/lib/: api.ts  constants.ts
frontend/src/pages/: ApprovalsPage.tsx  AuditLogsPage.tsx  CreateSpendPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  NotificationsPage.tsx  PoliciesPage.tsx  SettingsPage.tsx  SpendDetailPage.tsx  SpendsListPage.tsx
frontend/src/types/: spend.ts
(+14 files in other folders)
